name:                hsbci
version:             0.1.0.0
synopsis:            A fast, simple and modular HBCI library for Haskell
license:             AGPL-3
license-file:        LICENSE
author:              Paul Koerbitz
maintainer:          paul.koerbitz@gmail.com
copyright:           Paul Koerbitz
category:            Web
build-type:          Simple
cabal-version:       >=1.16

library
  exposed-modules:     Data.HBCI.Types,
                       Data.HBCI.Gen,
                       Data.HBCI.Parser,
                       Data.HBCI.HbciDef,
                       Data.HBCI.Messages
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing -O -funbox-strict-fields
  build-depends:       containers >= 0.5,
                       base >=4.6,
                       mtl >= 2.0,
                       vector >= 0.10,
                       text >= 1.0,
                       bytestring >= 0.10,
                       xml >= 1.3
  default-language:    Haskell2010

Test-Suite test-hsbci
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.6,
                       mtl >= 2.0,
                       test-framework >= 0.4.1,
                       test-framework-quickcheck2,
                       test-framework-hunit,
                       HUnit >= 1.2 && < 2,
                       text >= 1.0,
                       bytestring >= 0.10,
                       vector >= 0.10,
                       xml >= 1.3,
                       containers >= 0.5,
                       hsbci
  hs-source-dirs:      test
  ghc-options:         -Wall -fno-warn-name-shadowing
  x-uses-tf:           true
  default-language:    Haskell2010
  main-is:             TestHsBCI.hs
