name:                hsbci
version:             0.1.0.0
synopsis:            A fast, simple and modular HBCI library for Haskell
license:             AGPL-3
license-file:        LICENSE
author:              Paul Koerbitz
maintainer:          paul.koerbitz@gmail.com
copyright:           Paul Koerbitz
category:            Web
build-type:          Simple
cabal-version:       >=1.16

library
  exposed-modules:     Data.HBCI.Types,
                       Data.HBCI.Gen,
                       Data.HBCI.Parser,
                       Data.HBCI.HbciDef,
                       Data.HBCI.Messages,
                       Data.HBCI.Network,
                       Data.HBCI.Constants,
                       Data.HBCI.Jobs,
                       Data.HBCI.Utils,
                       Data.HBCI.Mt94x
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -O -funbox-strict-fields
  build-depends:       base >=4.6
                     , base64-bytestring >= 1.0.0.1
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , http-conduit >= 2.0
                     , mtl >= 2.0
                     , pretty >= 1.0
                     , text >= 0.11
                     , time >= 1.4.1 && <= 1.4.2
                     , old-locale >= 1.0
                     , vector >= 0.10
                     , xml >= 1.3
                     , either >= 4.0
  default-language:    Haskell2010

Test-Suite test-hsbci
  type:                exitcode-stdio-1.0
  build-depends:       HUnit >= 1.2 && < 2
                     , base >=4.6
                     , base64-bytestring >= 1.0.0.1
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , hsbci
                     , mtl >= 2.0
                     , pretty >= 1.0
                     , test-framework >= 0.4.1
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , text >= 0.11
                     , vector >= 0.10
                     , xml >= 1.3
  hs-source-dirs:      test
  ghc-options:         -Wall -fno-warn-name-shadowing
  x-uses-tf:           true
  default-language:    Haskell2010
  main-is:             TestHsBCI.hs

executable test-client
  main-is:             TestClient.hs
  build-depends:       HUnit >= 1.2 && < 2
                     , base >=4.6
                     , base64-bytestring >= 0.1
                     , base64-bytestring >= 1.0.0.1
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , hsbci
                     , http-conduit >= 2.0
                     , mtl >= 2.0
                     , old-locale >= 1.0
                     , pretty >= 1.0
                     -- , test-framework >= 0.4.1
                     -- , test-framework-hunit
                     -- , test-framework-quickcheck2
                     , text >= 0.11
                     , time >= 1.4.1 && <= 1.4.2
                     , vector >= 0.10
                     , xml >= 1.3
  ghc-options:         -Wall -fno-warn-name-shadowing -O -funbox-strict-fields
  default-language:    Haskell2010
  hs-source-dirs:      test

executable test-client2
  main-is:           TestClient2.hs
  build-depends:       base >=4.6
                     , base64-bytestring >= 1.0.0.1
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , either >= 4
                     , hsbci
                     , http-conduit >= 2.0
                     , mtl >= 2.0
                     , old-locale >= 1.0
                     , pretty >= 1.0
                     , text >= 0.11
                     , time >= 1.4.1 && <= 1.4.2
                     , vector >= 0.10
                     , xml >= 1.3
  ghc-options:         -Wall -fno-warn-name-shadowing -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns -O -funbox-strict-fields
  default-language:    Haskell2010
  hs-source-dirs:      test

-- executable test-web-client
--   main-is:             WebTestClient.hs
--   build-depends:       base                      >= 4     && < 5
--                      , mtl                       >= 2     && < 3
--                      , snap-core                 >= 0.9   && < 0.10
--                      , snap-server               >= 0.9   && < 0.10
--                      , hsbci
--   ghc-options:         -Wall -fno-warn-name-shadowing -O -funbox-strict-fields
--   default-language:    Haskell2010
--   hs-source-dirs:      test
